<resources>
    <string name="app_name">ChatProject</string>
    <string name="student">Student</string>
    <string name="chat">Chat</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_start_chatting">Login to start chatting</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="looking_to_create_an_account">Looking to create an account?</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_page">Login Page</string>
    <string name="welcome_you_are_logged">Welcome! You are logged</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Chats</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Info</string>
    <string name="logout">Logout</string>
    <string name="find_chat_by_code">Find chat by code</string>
    <string name="enter_chat_group_code">Enter chat group code</string>
    <string name="join">Join</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="enter_text_to_send">Enter text to send...</string>
    <string name="test">Test</string>
    <string name="join_a_group_by_code">Join a group by code</string>
    <string name="you_dont_have_groups_for_communication_yet">You dont have groups for communication yet</string>
    <string name="hint">hint</string>
    <string name="menu_chat" />
    <string name="Profile" />
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="student_chat">Student Chat</string>
</resources>